<resources>
    <string name="app_name">UlsuMap</string>
    <string name="nav_header_title">UlsuMap</string>
    <string name="nav_header_desc">Меню навигации</string>
    <string name="menu_change">Выбор корпуса</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_search">Поиск пути</string>
    <string name="menu_scanner">Сканирование штрих-кода</string>
    <string name="menu_send">Обратная связь</string>
    <string name="menu_download">Выбор ВУЗа</string>
    <string name="info_change_korp">Корпус</string>
    <string name="info_change_etazh">Этаж</string>
    <string name="switch1">Пункт 1                     </string>
    <string name="switch2">Пункт 2                     </string>
    <string name="switch3">Пункт 3                     </string>
    <string name="textView_download">Выберите ВУЗ:</string>
    <string name="button_download">Установить</string>
    <string name="button_change">Принять</string>
    <string name="button_download_delete">Удалить</string>
    <string name="fab_text2D">2D</string>
    <string name="fab_text3D">3D</string>
    <string name="text_send_name">Имя:</string>
    <string name="text_send_text">Обращение:</string>
    <string name="send_button_send">Отправить</string>
    <string name="feedback_hint">Выберите приложения для отправки по почте:</string>
    <string name="webView_noConnection"><![CDATA[<html><body> Отсутствует интернет-соединение.</body></html>]]></string>
    <string name="webView_name3D">Виртуальный тур по УлГУ</string>
    <string name="webView_hintEtazh"><![CDATA[<html><body> Данный этаж недоступен.</body></html>]]></string>
    <string name="webView_noLoaded"><![CDATA[<html><body> Карта не загружена.</body></html>]]></string>
    <string name="url3D">http://acoulson.offhst.ru/1index.html</string>
    <string name="nameKorpus">Корпус</string>
    <string name="nameEtazh">этаж</string>
    <string name="downloadSuccessfully">Скачивание завершено успешно.</string>
    <string name="installSuccessfully">Установка завершена успешно.</string>
    <string name="installFailed">Установить не удалось.</string>
    <string name="downloadFailed">Скачивание не удалось.</string>
    <string name="installAlready">Карта уже установлена.</string>
    <string name="mapDelete">Карта удалена.</string>
    <string name="host">http://acoulson.offhst.ru/</string>
    <string name="nameUlsu">Ульяновский государственный университет</string>
    <string name="nameK1">Главный корпус</string>
    <string name="nameK2">Корпус №2</string>
    <string name="nameK3">Корпус №3</string>
    <string name="nameK4">Корпус №4</string>
</resources>
